@@ -29,8 +29,6 @@ Roadmap PixelController
 -Option to use system audio as input source, currently its only mic input. 
 -Syphon support https://code.google.com/p/syphon-implementations/
 -OLA (http://www.opendmx.net/index.php/Open_Lighting_Architecture) input plugin see https://github.com/neophob/ola-to-tpm2net
- the screen gets not refreshed, thus the changes are not visible.
--Reference Colorsets in presets with name and not index number 
 
 
 Roadmap PixelInvaders Firmware
@@ -41,6 +39,7 @@ Roadmap PixelInvaders Firmware
 	-send reply (ack) only each 2nd frame? each 25th frame? side effects?
 	-maybe a streaming only firmware?
 -PixelInvaders Firmware: its possible that only the first half of the screen is updated - in such a case
+ the screen gets not refreshed, thus the changes are not visible. 
 -Support ambient color for the output panel(s)
 
 
