@@ -1,9 +1,14 @@
+Changelog v1.4.1 to v1.x.y
+--------------------------
+-Add new Help Tab, display a short help how to use PixelController
+-Fix: use colorset name (instead of index) if a preset is saved
+
 
 Changelog v1.4.0 to v1.4.1
 --------------------------
 -Fix update TPM2.net implementation (add total packet bytes)
 -Fix cleanup unused files
--Fix OSC listener, increased buffer size to 50kb to large image content can be sent via OSC
+-Fix OSC listener, increased buffer size to 50kb so large image content can be sent via OSC
 -Fix OSC address, expected: "/NAME" was: "NAME"
 -Fix shuffle Colorset in Random mode, fix Issue#37
 -Feature: disable beat detection if sound volume is too low
